# drawing_board

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml
.github/workflows/: backend-ci.yml  desktop-release-gate.yml  frontend-ci.yml
database/migrations/: V1__init_schema.sql
desktop/: CMakeLists.txt  README.md  package.json
desktop/release/: windows-installer.iss
desktop/resources/: resources.qrc
desktop/scripts/: build-desktop-devshell.ps1  build-windows-installer.ps1  generate-release-signing-keypair.mjs  prepare-release.mjs  sync-release-manifest.mjs  verify-release-assets.mjs
desktop/src/: canvasfilecodec.cpp  canvasfilecodec.h  canvasfilters.cpp  canvasfilters.h  canvassharedtypes.h  canvaswidget.cpp  canvaswidget.h  main.cpp  mainwindow.cpp  mainwindow.h  nativebridge.cpp  nativebridge.h
desktop/tests/: canvasmodules_test.cpp
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  USER-GUIDE.md
docs/design-system/: MASTER.md
drawing-board-backend/: Dockerfile.dev  build.gradle.kts  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
drawing-board-backend/application/: build.gradle.kts
drawing-board-backend/application/src/main/java/com/drawingboard/: Application.java
drawing-board-backend/application/src/main/java/com/drawingboard/common/api/: ApiErrorResponse.java  GlobalExceptionHandler.java
drawing-board-backend/application/src/main/resources/: application-docker.yml  application-local-it.yml  application.yml
drawing-board-backend/application/src/main/resources/db/migration/: V1__init_schema.sql
drawing-board-backend/canvas/: build.gradle.kts
drawing-board-backend/drawing/: build.gradle.kts
drawing-board-backend/export/: build.gradle.kts
drawing-board-backend/user/: build.gradle.kts
frontend/: .env.development  .env.production  .eslintrc.cjs  Dockerfile.dev  env.d.ts  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/assets/: main.css
frontend/src/router/: index.ts
frontend/src/stores/: canvas.ts
frontend/src/utils/: brush-preset-state.d.ts  brush-preset-state.js  canvas-color-state.d.ts  canvas-color-state.js  canvas-color-state.test.js
frontend/src/views/: CanvasView.vue
frontend/tests/: brush-preset-state.test.mjs
scripts/dev/: start-all.cmd  start-all.ps1  start-all.sh  stop-all.cmd  stop-all.ps1  stop-all.sh
scripts/integration/: integration.cmd  integration.ps1  integration.sh  local-integration.mjs
(+57 files in other folders)
